@@ -1,3 +1,7 @@
+May 5, 2010 edgbla <edgbla@yandex.ru>
+
+ * libpcsxcore/psxcounters.c: Updated (Rc2Disable).
+
 May 5, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * gui/DebugMemory.c: Show 0x7f as dots.
